<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abl">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/editTextMoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/ventas_de_motos"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editTextMarca"
                android:layout_width="241dp"
                android:layout_height="38dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="80dp"
                android:ems="10"
                android:hint="@string/marca"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextModelo"
                android:layout_width="232dp"
                android:layout_height="39dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/modelo"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMarca" />


            <EditText
                android:id="@+id/editTextArranque"
                android:layout_width="218dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/arranque"
                android:inputType="textPersonName"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextModelo" />


            <EditText
                android:id="@+id/editTextChasis"
                android:layout_width="221dp"
                android:layout_height="43dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/chasis"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextArranque" />

            <EditText
                android:id="@+id/editTextColor"
                android:layout_width="211dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:hint="@string/color"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextChasis" />

            <EditText
                android:id="@+id/editTexttip_combustible"
                android:layout_width="212dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/tipo_de_combustible"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextColor" />

            <EditText
                android:id="@+id/editTextEmbrague"
                android:layout_width="212dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/embrague"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTexttip_combustible" />

            <EditText
                android:id="@+id/editTextPrecio"
                android:layout_width="212dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmbrague" />

            <EditText
                android:id="@+id/editTextConf_motor"
                android:layout_width="212dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/configuracion_del_motor"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrecio" />


            <ImageButton
                android:id="@+id/imageButtonGrabar"
                android:layout_width="67dp"
                android:layout_height="64dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="264dp"
                android:layout_marginTop="144dp"
                android:contentDescription="@string/todo"
                android:onClick="create"
                android:src="@android:drawable/ic_menu_save"
                app:layout_constraintBottom_toTopOf="@+id/btneliminar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="239dp"
                android:layout_height="29dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="52dp"
                android:backgroundTint="@android:color/background_dark"
                android:text="@string/ingresar_productos"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btneliminar"
                android:layout_width="70dp"
                android:layout_height="53dp"
                android:layout_marginStart="256dp"
                android:layout_marginTop="224dp"
                android:background="@android:drawable/ic_menu_delete"
                android:onClick="delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="147dp"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="252dp"
                android:layout_marginTop="304dp"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/btnfoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="28dp"
                android:layout_marginStart="252dp"
                android:layout_marginTop="292dp"
                android:background="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toTopOf="@+id/buttonSiguiente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/ivimagen"
                android:layout_width="154dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.933"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>